--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
 AM_CFLAGS= $(CC_OPT)
 
 SUBDIRS=proto include common communication ldm dss cfg io layout serializer \
-	store admin lrs layout-modules cli tests
+	store admin lrs layout-modules cli tests tests/unit tests/integration
