--- a/src/tests/unit/Makefile.am
+++ b/src/tests/unit/Makefile.am
@@ -11,7 +11,8 @@ TEST_EXTENSIONS=.sh
 
 check_PROGRAMS=test_dss_lock test_dss_object_move test_ping \
 	           test_dss_lazy_find_object test_store_object_md \
-	           test_dss_medium_locate test_phobos_admin_medium_locate
+	           test_dss_medium_locate test_phobos_admin_medium_locate \
+	           test_store_object_md_get
 
 TESTS=$(check_PROGRAMS)
 
@@ -29,6 +30,10 @@ test_dss_object_move_LDADD=../../dss/libpho_dss.la ../../cfg/libpho_cfg.la \
 test_ping_SOURCES=test_ping.c mock_communication.c
 test_ping_LDADD=../../admin/libphobos_admin.la ../../dss/libpho_dss.la \
                 ../../common/libpho_common.la ../../ldm/libpho_ldm.la
+
+test_store_object_md_get_SOURCES=test_store_object_md_get.c test_setup.c
+test_store_object_md_get_LDADD=../../store/libphobos_store.la \
+	                           ../../admin/libphobos_admin.la
 
 test_store_object_md_SOURCES=test_store_object_md.c
 test_store_object_md_LDADD=../../store/libphobos_store.la
