tests: mutualize the use of test_setup across tests
This patch adds the use of test_setup.{c, h} in test_locate.c
and moves the former two files in the global test folder.

Change-Id: Ib4d3ee4df451c23c31c1b5f06e11d29c083ddd12
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8813
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/src/tests/integration/Makefile.am
+++ b/src/tests/integration/Makefile.am
@@ -17,8 +17,9 @@ check_SCRIPTS=test_delete.sh test_undelete.sh test_put.sh test_object_list.sh \
 
 TESTS=$(check_SCRIPTS)
 
-test_locate_SOURCES=test_locate.c
-test_locate_LDADD=../../store/libphobos_store.la ../../dss/libpho_dss.la
+test_locate_SOURCES=test_locate.c ../test_setup.c ../test_setup.h
+test_locate_LDADD=../../store/libphobos_store.la ../../dss/libpho_dss.la \
+                  ../../admin/libphobos_admin.la
 
 medium_locker_SOURCES=medium_locker.c
 medium_locker_LDADD=../../dss/libpho_dss.la ../../store/libphobos_store.la
