pkg: update to 1.92
Change-Id: I8cac90eae95fbbd7ff3e134023407c5e09a785db
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8961
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -113,6 +113,10 @@ rm -f $RPM_BUILD_ROOT/%{_libdir}/phobos/libpho_layout_*.la
 %{_libdir}/libphobos_admin.la
 
 %changelog
+* Fri Jul 2 2021 - Yoann Valeri <yoann.valeri@cea.fr> - 1.92.0-1
+- Locate command
+- Uuid and version options to get command
+
 * Mon May 17 2021 - Yoann Valeri <yoann.valeri@cea.fr> - 1.91.2-1
 - Modified concurrency lock management in DSS
 - Modified DB schema
