tests: move up tests directory to root
Add some aliases and flags in Makefile to enhance the readability and
facilitate future additions/modifications

Change-Id: Ic44b6886996a170c2ce8113d7de449ff71420730
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/8993
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -112,10 +112,10 @@ AC_CONFIG_FILES([Makefile
          src/store/Makefile
          src/layout-modules/Makefile
          src/admin/Makefile
-         src/tests/Makefile
-         src/tests/interns/Makefile
-         src/tests/externs/Makefile
          src/cli/Makefile
+         tests/Makefile
+         tests/interns/Makefile
+         tests/externs/Makefile
          phobos.spec
 ])
 AC_OUTPUT
