--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,5 +1,18 @@
+TO_SRC=../src
+
 AM_CFLAGS= $(CC_OPT) @CMOCKA_CFLAGS@
 AM_LDFLAGS=@CMOCKA_LIBS@
+
+ADMIN_LIB=$(TO_SRC)/admin/libphobos_admin.la
+CFG_LIB=$(TO_SRC)/cfg/libpho_cfg.la
+COMMON_LIB=$(TO_SRC)/common/libpho_common.la
+COMMUNICATION_LIB=$(TO_SRC)/communication/libpho_comm.la
+DSS_LIB=$(TO_SRC)/dss/libpho_dss.la
+IO_LIB=$(TO_SRC)/io/libpho_io.la
+LDM_LIB=$(TO_SRC)/ldm/libpho_ldm.la
+RAID1_LIB=$(TO_SRC)/layout-modules/libpho_layout_raid1.la
+SERIALIZER_LIB=$(TO_SRC)/serializer/libpho_serializer.la
+STORE_LIB=$(TO_SRC)/store/libphobos_store.la
 
 # FIXME:
 # Possibly-lost leaks appear in valgrind reports when testing acceptance.sh,
@@ -52,62 +65,61 @@ check-local: pre-check-local
 	rm -f /tmp/phobos_test.lock
 
 test_log_SOURCES=test_log.c pho_test_utils.h
-test_log_LDADD=../common/libpho_common.la
+test_log_LDADD=$(COMMON_LIB)
 
 test_bad_comm_SOURCES=test_bad_comm.c pho_test_utils.h
-test_bad_comm_LDADD=../communication/libpho_comm.la ../common/libpho_common.la \
-		    ../serializer/libpho_serializer.la
+test_bad_comm_LDADD=$(COMMON_LIB) $(COMMUNICATION_LIB) $(SERIALIZER_LIB)
 
 test_common_SOURCES=test_common.c pho_test_utils.h
-test_common_LDADD=../common/libpho_common.la
+test_common_LDADD=$(COMMON_LIB)
 
 test_communication_SOURCES=test_communication.c pho_test_utils.h
-test_communication_LDADD=../communication/libpho_comm.la ../common/libpho_common.la
+test_communication_LDADD=$(COMMON_LIB) $(COMMUNICATION_LIB)
 
 test_attrs_SOURCES=test_attrs.c pho_test_utils.h
-test_attrs_LDADD=../common/libpho_common.la
+test_attrs_LDADD=$(COMMON_LIB)
 
 test_mapper_SOURCES=test_mapper.c pho_test_utils.h
-test_mapper_LDADD=../store/libphobos_store.la
+test_mapper_LDADD=$(STORE_LIB)
 
 test_store_SOURCES=test_store.c pho_test_utils.h pho_test_xfer_utils.h
-test_store_LDADD=../store/libphobos_store.la
+test_store_LDADD=$(STORE_LIB)
 
 test_dss_SOURCES=test_dss.c pho_test_utils.h
-test_dss_LDADD=../dss/libpho_dss.la ../cfg/libpho_cfg.la ../common/libpho_common.la
+test_dss_LDADD=$(DSS_LIB) $(CFG_LIB) $(COMMON_LIB)
 
 test_cfg_SOURCES=test_cfg.c pho_test_utils.h
-test_cfg_LDADD=../cfg/libpho_cfg.la ../common/libpho_common.la
+test_cfg_LDADD=$(CFG_LIB) $(COMMON_LIB)
 
 test_scsi_SOURCES=test_scsi.c pho_test_utils.h
-test_scsi_LDADD=../ldm/libpho_ldm.la ../cfg/libpho_cfg.la ../common/libpho_common.la
+test_scsi_LDADD=$(LDM_LIB) $(CFG_LIB) $(COMMON_LIB)
 
 test_dev_tape_SOURCES=test_dev_tape.c pho_test_utils.h
-test_dev_tape_LDADD=../ldm/libpho_ldm.la ../cfg/libpho_cfg.la ../common/libpho_common.la
+test_dev_tape_LDADD=$(LDM_LIB) $(CFG_LIB) $(COMMON_LIB)
 
 test_ldm_SOURCES=test_ldm.c pho_test_utils.h
-test_ldm_LDADD=../ldm/libpho_ldm.la ../cfg/libpho_cfg.la ../common/libpho_common.la
+test_ldm_LDADD=$(LDM_LIB) $(CFG_LIB) $(COMMON_LIB)
 
 test_type_utils_SOURCES=test_type_utils.c pho_test_utils.h
-test_type_utils_LDADD=../common/libpho_common.la
+test_type_utils_LDADD=$(COMMON_LIB)
 
 test_store_retry_SOURCES=test_store_retry.c pho_test_utils.h pho_test_xfer_utils.h
-test_store_retry_LDADD=../store/libphobos_store.la ../admin/libphobos_admin.la
+test_store_retry_LDADD=$(ADMIN_LIB) $(STORE_LIB)
 
 test_io_SOURCES=test_io.c pho_test_utils.h
-test_io_LDADD=../io/libpho_io.la ../common/libpho_common.la
+test_io_LDADD=$(IO_LIB) $(COMMON_LIB)
 
+# TODO: try to link against the phobos_store library instead of
+# the store_alias object file
 test_store_alias_SOURCES=test_store_alias.c
-test_store_alias_LDADD=../cfg/libpho_cfg.la ../common/libpho_common.la \
-			../store/.libs/store_alias.o
+test_store_alias_LDADD=$(CFG_LIB) $(COMMON_LIB) \
+                       $(TO_SRC)/store/.libs/store_alias.o
 
 test_delete_SOURCES=test_delete.c pho_test_utils.h
-test_delete_LDADD=../store/libphobos_store.la
+test_delete_LDADD=$(STORE_LIB)
 
 test_undelete_SOURCES=test_undelete.c pho_test_utils.h
-test_undelete_LDADD=../store/libphobos_store.la
+test_undelete_LDADD=$(STORE_LIB)
 
 test_raid1_split_locate_SOURCES=test_raid1_split_locate.c
-test_raid1_split_locate_LDADD=../cfg/libpho_cfg.la ../common/libpho_common.la \
-                              ../dss/libpho_dss.la \
-                              ../layout-modules/libpho_layout_raid1.la
+test_raid1_split_locate_LDADD=$(CFG_LIB) $(COMMON_LIB) $(DSS_LIB) $(RAID1_LIB)
