fix: missing 1.93 database schema files for build
Change-Id: Ic384353dd9d601c827e38d9e512b22183c482038
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9010
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -28,6 +28,8 @@ EXTRA_DIST=phobos/__init__.py \
 	   phobos/db/sql/1.91/schema.sql \
 	   phobos/db/sql/1.92/drop_schema.sql \
 	   phobos/db/sql/1.92/schema.sql \
+	   phobos/db/sql/1.93/drop_schema.sql \
+	   phobos/db/sql/1.93/schema.sql \
 	   scripts/phobos \
 	   setup.py
 
