cfg: add LTO7M8 and LTO9 technologies to config template
Change-Id: Ia738cfa5dd6efe4c7cfcf908abb925f8c5455b5b
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9014
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -76,6 +76,9 @@ models = ULTRIUM-TD7,ULT3580-TD7,ULTRIUM-HH7,ULT3580-HH7,HH LTO Gen 7
 [drive_type "LTO8_drive"]
 models = ULTRIUM-TD8,ULT3580-TD8,ULTRIUM-HH8,ULT3580-HH8,HH LTO Gen 8
 
+[drive_type "LTO9_drive"]
+models = ULTRIUM-TD9,ULT3580-TD9,ULTRIUM-HH9,ULT3580-HH9,HH LTO Gen 9
+
 [tape_model]
 # List of supported tape models (checked by "phobos tape add ...")
 # comma separated list of tape models, without any space
@@ -93,5 +96,11 @@ drive_rw = LTO6_drive,LTO7_drive
 [tape_type "LTO7"]
 drive_rw = LTO7_drive,LTO8_drive
 
-[tape_type "LTO8"]
+[tape_type "LTO7M8"]
 drive_rw = LTO8_drive
+
+[tape_type "LTO8"]
+drive_rw = LTO8_drive,LTO9_drive
+
+[tape_type "LTO9"]
+drive_rw = LTO9_drive
