layout: remove simple layout module
Change-Id: I790312e12b551c6ec329d3b734d87810489ce0e4
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9053
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -40,7 +40,7 @@ cmd_format     = /usr/sbin/pho_ldm_helper format_ltfs "%s" "%s"
 
 [store]
 # default layout for put operations
-# default_layout = simple
+# default_layout = raid1
 # default resource family for put operations
 default_family = tape
 # default alias for put operations
