cfg: implement cfg update design
Change-Id: Ief6cd29fcb89f22817d98618b48c42d67e36c287
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9071
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -40,9 +40,11 @@ cmd_format     = /usr/sbin/pho_ldm_helper format_ltfs "%s" "%s"
 
 [store]
 # default layout for put operations
-default_layout = simple
+# default_layout = simple
 # default resource family for put operations
 default_family = tape
+# default alias for put operations
+default_alias = simple
 
 [io]
 # block size used for writing data to multiple media (negative values or 0 will
@@ -53,6 +55,10 @@ io_block_size = -1
 [layout_raid1]
 # number of data replicates for raid1 layout (default is 2)
 repl_count = 2
+
+[alias "simple"]
+# default alias for put operations
+layout = simple
 
 ######### Tape/drive support and compatibility rules ########
 # You should not modify the following configuration unless:
