--- a/tests/phobos.conf
+++ b/tests/phobos.conf
@@ -19,6 +19,12 @@ drive_rw = LTO5_drive,LTO6_drive
 [tape_type "LTO6"]
 drive_rw = LTO6_drive
 
+[store]
+default_alias = simple
+
+[alias "simple"]
+layout = simple
+
 [alias "full-test"]
 family = dir
 layout = raid1
