--- a/tests/phobos.conf
+++ b/tests/phobos.conf
@@ -23,7 +23,8 @@ drive_rw = LTO6_drive
 default_alias = simple
 
 [alias "simple"]
-layout = simple
+layout = raid1
+lyt-params = repl_count=1
 
 [alias "full-test"]
 family = dir
