tests: divide externs tests into cli and api tests
Change-Id: I2ed9cdc26a00d22b50507f4809ecc32c54083b09
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9090
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/configure.ac
+++ b/configure.ac
@@ -115,7 +115,7 @@ AC_CONFIG_FILES([Makefile
          src/cli/Makefile
          tests/Makefile
          tests/interns/Makefile
-         tests/externs/Makefile
+         tests/externs/cli/Makefile
          phobos.spec
 ])
 AC_OUTPUT
