tests: move test_locate.c to externs/api
Change-Id: I0e0cca2385be7b33b5060f274dcbddc152fdd593
Signed-off-by: Yoann Valeri <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/9092
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS = -I autotools/m4
 
-SUBDIRS=src tests tests/externs/cli tests/interns
+SUBDIRS=src tests tests/externs/api tests/externs/cli tests/interns
 
 rpm_dir=`pwd`/rpms
 
