--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -58,7 +58,8 @@ repl_count = 2
 
 [alias "simple"]
 # default alias for put operations
-layout = simple
+layout = raid1
+lyt-params = repl_count=1
 
 ######### Tape/drive support and compatibility rules ########
 # You should not modify the following configuration unless:
